--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     background-position: center;
     background-blend-mode: overlay;    
     width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -53,4 +54,34 @@ tr:hover{
     width: 2rem;
     border-radius: 50%;
     object-fit: cover;
+}
+@media (max-width:637px){
+    th,td{
+        padding: 0.2rem;
+        font-size: 0.8rem;
+    }
+    .avatar{
+        width: 1.5rem;
+    }
+}
+@media(max-width:427px){
+    th,td{
+        padding: 0.1rem;
+        font-size:0.6rem;
+    }
+    .avatar{
+        width:1.2rem ;
+    }
+}
+@media(min-width:1441px){
+    th,td{
+        padding: 1rem;
+        font-size: 1.5rem;
+    }
+}
+@media(min-width:1833px){
+    th,td{
+        padding: 1.5rem;
+        font-size: 2rem;
+    }
 }
